# DataStructuresAlgorithms

ArvoreBB/: CMakeLists.txt  arvore.c  arvore.h  arvore_app.c
EDABancariaLista/: conta_bancaria.c  conta_fidelidade.c  conta_fidelidade.h  conta_poupanca.h  list.c  list.h  main.c
Hash/: CMakeLists.txt  hash.c  hash.h  list.c
ListaCircularDupla/: ListaCircularDupla.cbp  ListaCircularDupla.layout  circle_list.c  main.c
ListaCircularSimples/: ListaCircularSimples.cbp  ListaCircularSimples.depend  ListaCircularSimples.layout  circle_list.c  circle_list.h  main.c
ListaOrdenada/: ListaOrdenada.cbp  ListaOrdenada.depend  ListaOrdenada.layout  main.c  ordered_list.c  ordered_list.h
Particoes/: CMakeLists.txt  list.h  particao.c  particao.h  particao_app.c
TAD Heap/: Heap.c  Heap.h  TAD Heap.cbp  TAD Heap.depend  TAD Heap.layout  main.c
TAD Listas/: TAD Listas.cbp  TAD Listas.depend  TAD Listas.layout  list.c  list.h  main.c
TADBancariaLista/: TADBancariaLista.cbp  TADBancariaLista.depend  TADBancariaLista.layout  conta_bancaria.h  conta_poupanca.c
